adding remote bg

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
   <video id="video-bg"  playsinline autoplay muted loop>
-          <source src="./assets/SkyAndCloudsh264.mp4">
+          <source src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2FSkyAndCloudsh264.mp4?v=1626890284406">
           </video>
   
    <div class="folder">
