--- a/about-video.html
+++ b/about-video.html
@@ -33,13 +33,12 @@
     <link rel="stylesheet" href="./style.css" />
 
     <!-- Import the webpage's javascript file -->
-    <script src="./script.js" defer></script>
+    <script src="./background.js" defer></script>
   </head>
   <body>
   <video id="video-bg"  playsinline autoplay muted loop>
             <source src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2FSkyAndCloudsh264.mp4?v=1626890284406">
           </video>
-  <main>
     <header>
 <div class="back">
 <a href="archive.html">
@@ -58,6 +57,5 @@
       </video>
     </div>
 
-    </main>
 
   </body>
