--- a/index.html
+++ b/index.html
@@ -35,28 +35,31 @@
 
     <!-- Import the webpage's javascript file -->
     <script src="./script.js" defer></script>
+
   </head>
   <body>
-  <video id="video-bg"  playsinline autoplay muted loop>
+    <div id="video-bg">
+ <!-- <video playsinline autoplay muted loop>
           <source src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2FSkyAndCloudsh264.mp4?v=1626890284406">
-          </video>
-  
+          </video> -->
+  </div>
    <div class="folder">
      <div class="folder-holder">
      <a href="./archive.html" id="portalOne"><img id="folderOne" src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2Ffolder-crop.png?v=1626923737032"></a>
        <br>
-       <p>
+       <p class="blkppl">
     #blackpeopledancingontheinternet
   </p>
      </div>
         </div>
  
 <footer>
-  <div class="icon"><img id="day" src="./assets/sun-icon.png"></div>
+  <div class="icon"></div>
 <div id="time">
 </div>
     </footer>
-
+     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./time.js"></script>
+   
   </body>
 </html>
