--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
 
     <!-- Import the webpage's javascript file -->
     <script src="./background.js" defer></script> 
+    
   </head>
   <body>
     <div id="video-bg">
@@ -86,6 +87,6 @@
     </ul>
    
     </main>
-
+<script type="text/javascript" src="./responsive-bg.js"></script>
   </body>
 </html>
