--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </footer>
      <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./time.js"></script>
+    <script type="text/javascript"src="./responsive-bg.js"></script>
    
   </body>
 </html>
