some popup mobile tweaks

--- a/index.html
+++ b/index.html
@@ -35,13 +35,24 @@
 
     <!-- Import the webpage's javascript file -->
     <script src="./script.js" defer></script>
+     <!--
+            (o\---/o)          
+             ( , , )           
+        ,~~._(_(T)_)_,~~.
+       |"--",-"-.-"-."--"| 
+       |   ( site by )   |
+       |    ". tee ."    |
+       |  _,-."._.",-._  |
+       '-(ooO )---( Ooo)-'
+         ((_) )   ( (_))
+          "--"     "--" 
+hand coded with love & care... 
+http://teeaze.world
 
+-->
   </head>
   <body>
     <div id="video-bg">
- <!-- <video playsinline autoplay muted loop>
-          <source src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2FSkyAndCloudsh264.mp4?v=1626890284406">
-          </video> -->
   </div>
    <div class="folder">
      <div class="folder-holder">
