--- a/about-video.html
+++ b/about-video.html
@@ -53,7 +53,7 @@
     </header>
     <div class="about-vid">
       <video controls playsinline>
-        <source src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2FNicKay.mp4?v=1626890563670" type="">
+        <source src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2FNicKay.mp4?v=1626890563670#t=0.001" type="">
       </video>
     </div>
 
