--- a/about-video.html
+++ b/about-video.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="./style.css" />
 
     <!-- Import the webpage's javascript file -->
-    <script src="./background.js" defer></script>
+    <script src="./bg.js" defer></script>
   </head>
   <body>
     <div id="video-bg">
