--- a/archive.html
+++ b/archive.html
@@ -340,7 +340,10 @@ Four tiles with black backgrounds, white wavy arial letters forming words (glide
     </div>
   </div>
 </div>
+<footer>
+ <div class="alt-button"><a href="./about-video.html"> about </a></div>
+</footer>
  <script type="text/javascript" src="./popup.js"></script>
- <script type="text/javascript" src="./background.js"></script>
+ <script type="text/javascript" src="./bg.js"></script>
   </body>
 </html>
