--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="./about.css" />
 
     <!-- Import the webpage's javascript file -->
-    <script src="./background.js" defer></script> 
+    <script src="./bg.js" defer></script> 
     
   </head>
   <body>
@@ -87,6 +87,5 @@
     </ul>
    
     </main>
-<script type="text/javascript" src="./responsive-bg.js"></script>
-  </body>
+      </body>
 </html>
