--- a/about-video.html
+++ b/about-video.html
@@ -35,7 +35,7 @@
     <!-- Import the webpage's javascript file -->
     <script src="./bg.js" defer></script>
   </head>
-  <body>
+  <body class="noscroll">
     <div id="video-bg">
       
     </div>
