--- a/archive.html
+++ b/archive.html
@@ -341,7 +341,7 @@ Four tiles with black backgrounds, white wavy arial letters forming words (glide
   </div>
 </div>
 <footer>
- <div class="alt-button"><a href="./about-video.html"> about </a></div>
+ <!--<div class="alt-button"><a href="./about-video.html"> about </a></div>-->
 </footer>
  <script type="text/javascript" src="./popup.js"></script>
  <script type="text/javascript" src="./bg.js"></script>
