optimizing file sizes

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-      
+    <div class="about-cont">
     <ul class="aboutGrid">
     <li class="about">
     
@@ -85,6 +85,7 @@
       </li>
 
     </ul>
+  </div>
    
     </main>
       </body>
