--- a/about-video.html
+++ b/about-video.html
@@ -42,7 +42,7 @@
     <header>
 <div class="back">
 <a href="archive.html">
-  <img id="backButton" src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2Fpointer-back.png?v=1626924541421">
+  <img id="backButton" src="./assets/pointer-back.png">
   </a>
       </div>
       <div class="next">
