--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ http://teeaze.world
   </div>
    <div class="folder">
      <div class="folder-holder">
-     <a href="./archive.html" id="portalOne"><img id="folderOne" src="https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2Ffolder-crop.png?v=1626923737032"></a>
+     <a href="./archive.html" id="portalOne"><img id="folderOne" src="./assets/folder-crop.png"></a>
        <br>
        <p class="blkppl">
     #blackpeopledancingontheinternet
