--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
           <span class="emphasis">“NIC Kay: #blackpeopledancingontheinternet,”</span> the New Museum’s 2021
             artist in residence program, is organized by Emily Mello, Associate
             Director of Education, and Andrew An Westover, Keith Haring Director
-            of Education and Public Engagement.
+            of Education and Public Engagement. This site was co-designed and developed with the help of Tee Topor. 
         </p>
       </li>
 
