--- a/archive.html
+++ b/archive.html
@@ -30,6 +30,8 @@
 
     <!-- Import the webpage's javascript file-->
     <script src="./script.js" defer></script>
+     <script src="./node_modules/body-scroll-lock/lib/bodyScrollLock.js"></script>
+</head>
   </head>
   <body>
     <div id="video-bg">
