--- a/archive.html
+++ b/archive.html
@@ -34,6 +34,7 @@
 </head>
   </head>
   <body>
+    <div class="siteWrapper">
     <div id="video-bg">
  </div>
 
@@ -826,5 +827,6 @@ I've been to this party. The seemingly mundane and quiet possibility in this pai
 
  <script type="text/javascript" src="./popup.js"></script>
  <script type="text/javascript" src="./bg.js"></script>
+</div>
   </body>
 </html>
