--- a/archive.html
+++ b/archive.html
@@ -31,6 +31,7 @@
     <!-- Import the webpage's javascript file-->
     <script src="./script.js" defer></script>
      <script src="./node_modules/body-scroll-lock/lib/bodyScrollLock.js"></script>
+     <script type="text/javascript" src="./bodyscolllock.js"></script>
 </head>
   </head>
   <body>
